# home-intercom

./: .gitignore  LICENSE  README.md  pyproject.toml
printables/: README.md
src/home_intercom/: __main__.py  button.py  cli.py  config.py  core.py  gpio.py  home_assistant.py  http_server.py  keyboard.py  recording.py  restart.py  sounds.py
src/scripts/: ha_play_wav.py
